--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -98,21 +98,26 @@
 	  					   <fieldset>
 
 	                     <div class="form-field">
-	  						      <input name="minduration" type="number" class="full-width" placeholder="Minimum duration (hrs)" value="{{ minduration }}">
+                         <h6>Minimum duration (hrs)</h6>
+	  						      <input name="minduration" type="number" class="full-width" value="{{ minduration }}">
 	                     </div>
 
 	                     <div class="form-field">
-	  						      <input name="maxduration" type="number" class="full-width" placeholder="Maximum duration (hrs)" value="{{ maxduration }}>
+                         <h6>Maximum duration (hrs)</h6>
+	  						      <input name="maxduration" type="number" class="full-width" value="{{ maxduration }}>
 	                     </div>
 
 	                     <div class="form-field">
-	  						      <input name="maxdistance" type="number" class="full-width" placeholder="Maximum distance (km)" value="{{ maxdistance }}">
+                         <h6>Maximum distance (km)</h6>
+	  						      <input name="maxdistance" type="number" class="full-width" value="{{ maxdistance }}">
 	                     </div>
                        <div class="form-field">
-	  						      <input name="latitude" type="number" class="full-width" placeholder="Latitude" value="{{ latitude }}" step="any">
+                         <h6>Latitude</h6>
+	  						      <input name="latitude" type="number" class="full-width" value="{{ latitude }}" step="any">
 	                     </div>
                        <div class="form-field">
-	  						      <input name="longitude" type="number" class="full-width" placeholder="Longitude" value="{{ longitude }}" step="any">
+                         <h6>Longitude</h6>
+	  						      <input name="longitude" type="number" class="full-width" value="{{ longitude }}" step="any">
 	                     </div>
 	                     <button type="submit" class="submit button-primary full-width-on-mobile">Search for projects</button>
 
@@ -127,25 +132,31 @@
 	  					   <fieldset>
 
 	                     <div class="form-field">
+                         <h6>Longitude</h6>
 	  						      <input name="title" type="text" class="full-width" placeholder="Title">
 	                     </div>
 
 	                     <div class="form-field">
+                         <h6>Longitude</h6>
 	  						      <input name="description" type="text" class="full-width" placeholder="Description">
 	                     </div>
 
                        <div class="form-field">
+                         <h6>Longitude</h6>
 	  						      <input name="latitude" type="number" class="full-width" placeholder="Latitude" step="any">
 	                     </div>
                        <div class="form-field">
+                         <h6>Longitude</h6>
 	  						      <input name="longitude" type="number" class="full-width" placeholder="Longitude" step="any">
 	                     </div>
                        <select name="type">
+                         <h6>Longitude</h6>
                          <option value="Social">Social</option>
                          <option value="Educational">Educational</option>
                          <option value="Environmental">Environmental</option>
                        </select>
                        <div class="form-field">
+                         <h6>Longitude</h6>
 	  						      <input name="duration" type="number" class="full-width" placeholder="Duration (hrs)">
 	                     </div>
 	                     <button type="submit" class="submit button-primary full-width-on-mobile">Create new project</button>
