--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -45,7 +45,7 @@
     width: 50% !important;
   }
   input, select {
-    padding: 1em, 1.5em;
+    padding: 1em, 1.5em !important;
   }
   </style>
 
