--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -47,6 +47,7 @@
   input, select {
     padding: 0.5em 1em !important;
     line-height: 1.5em !important;
+    height: 3em !important;
   }
   </style>
 
